--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,8 @@ h2 {
   padding-left: 22px;
   padding-top: 8px;
   position: relative;
+  box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.05);
+  border-radius: 4px;
 }
 
 .close {
@@ -139,6 +141,8 @@ h2 {
   text-align: left;
   padding-top: 3px;
   padding-left: 18px;
+  box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.05);
+  border-radius: 4px;
 }
 
 .expenses {
@@ -168,6 +172,7 @@ h2 {
   left: 73%;
   border-radius: 50px;
   font-size: 14px;
+  box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.05);
 }
 
 .c {
@@ -194,6 +199,8 @@ h2 {
   background-color: white;
   border: none;
   margin-top: 10px;
+  box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.05);
+  border-radius: 4px;
 }
 
 .accounts-buttons-box {
@@ -262,4 +269,6 @@ h2 {
   padding-bottom: 20px;
   display: block;
   position: relative;
+  box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.05);
+  border-radius: 4px;
 }
