Update semantic naming for accessibility

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ button.nav-button:active {
 }
 
 /* Cards */
-.main-three {
+.income-expenses-credit-score {
   margin-left: 110px;
   width: 84%;
 }
