--- a/styles.css
+++ b/styles.css
@@ -1,471 +1,597 @@
 /* General */
-html {
-  height: 100%;
+html
+{
+    height: 100%;
 }
 
-body {
-  background-color: #F5F5F5;
-  box-sizing: border-box;
-  font-family: 'Biryani', sans-serif;
-}
+body
+{
+    box-sizing: border-box;
 
-button:active {
-  transform: translateY(4px);
+    background-color: #f5f5f5;
+
+    font-family: 'Biryani', sans-serif;
 }
 
 /* Headers */
-h1 {
-  margin-left: 110px;
-  padding-top: 2px;
-  font-size: 30px;
+h1
+{
+    margin-left: 110px;
+    padding-top: 2px;
+
+    font-size: 30px;
 }
 
-h2 {
-  display: inline;
-  float: left;
-  margin-left: 110px;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  padding: 0px;
+h2
+{
+    display: inline;
+    float: left;
+
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 110px;
+    padding: 0;
 }
 
 /* Columns */
-.column-l {
-  position: absolute;
-  right: 50%;
-  left: 0;
-  top: 0;
-  bottom: 0;
+.column-l
+{
+    position: absolute;
+    top: 0;
+    right: 50%;
+    bottom: 0;
+    left: 0;
 }
 
-.column-r {
-  position: absolute;
-  right: 0;
-  left: 50%;
-  top: 0;
-  bottom: 0;
-  padding-left: 75px;
+.column-r
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+
+    padding-left: 75px;
 }
+
 
 /* Nav Bar */
-nav {
-  background-color: white;
-  width: 75px;
-  margin: 0px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 2;
+nav
+{
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    bottom: 0;
+    left: 0;
+
+    width: 75px;
+    margin: 0;
+
+    background-color: white;
 }
 
-li {
-  list-style-type: none;
-  padding-left: 15px;
-  padding-right: 22px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+
+li
+{
+    padding-top: 5px;
+    padding-right: 22px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+
+    list-style-type: none;
 }
 
-.nav-icons-box {
-  margin-top: 235px;
+.nav-icons-box
+{
+    margin-top: 235px;
 }
 
-.icons {
-  width: 30px;
-  height: auto;
+.icons
+{
+    width: 30px;
+    height: auto;
 }
 
-.nav-button {
-  background-color: white;
-  border-color: white;
+.nav-button
+{
+    border-color: white;
+    background-color: white;
 }
 
-button.nav-button:active {
+button.nav-button:active
+{
     transform: translateY(0px);
 }
 
-.logo {
-  width: 60px;
-  height: auto;
-  padding-left: 8px;
-  padding-right: 7px;
-  margin-top: 10px;
+.logo
+{
+    width: 60px;
+    height: auto;
+    margin-top: 10px;
+    padding-right: 7px;
+    padding-left: 8px;
 }
 
-.with-border {
-  border-left: solid 4px #1CA3BA;
+.with-border
+{
+    border-left: solid 4px #1ca3ba;
 }
 
-.recent {
-  margin-left: 15px;
+.recent
+{
+    margin-left: 15px;
 }
 
-.accounts-header {
-  margin-top: 60px;
-  position: relative;
+.accounts-header
+{
+    position: relative;
+
+    margin-top: 60px;
 }
 
-.icons2 {
-  width: 30px;
-  height: auto;
-  float: left;
-  margin-left: 12px;
+.icons2
+{
+    float: left;
+
+    width: 30px;
+    height: auto;
+    margin-left: 12px;
 }
 
 /* Popup */
-.popup {
-  width: 79%;
-  height: 80px;
-  margin-left: 110px;
-  margin-bottom: 13px;
-  background-image: linear-gradient(to right, #8ED1DC, #E3F4F6);
-  padding-left: 22px;
-  padding-top: 8px;
-  position: relative;
-  box-shadow: 0px 0px 14px -5px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
-  border: 0px;
+.popup
+{
+    position: relative;
+
+    width: 79%;
+    height: 80px;
+    margin-bottom: 13px;
+    margin-left: 110px;
+    padding-top: 8px;
+    padding-left: 22px;
+
+    border: 0;
+    border-radius: 4px;
+    background-image: linear-gradient(to right, #8ed1dc, #e3f4f6);
+    box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
 }
 
-.close {
-  position: absolute;
-  background: transparent;
-  border: none;
-  right: 12px;
-  top: 12px;
-  padding: 0;
+.close
+{
+    position: absolute;
+    top: 12px;
+    right: 12px;
+
+    padding: 0;
+
+    border: none;
+    background: transparent;
 }
 
-.x {
-  height: 10px;
-  width: 10px;
+.x
+{
+    width: 10px;
+    height: 10px;
+}
+
+/* Buttons */
+button:active
+{
+    transform: translateY(4px);
 }
 
 /* Cards */
-.income-expenses-credit-score {
-  margin-left: 110px;
-  width: 84%;
+.income-expenses-credit-score
+{
+    width: 84%;
+    margin-left: 110px;
 }
 
-.a {
-  display: inline;
-  width: 30%;
-  height: 100px;
-  background-color: white;
-  border: none;
-  text-align: left;
-  padding-top: 3px;
-  padding-left: 18px;
-  box-shadow: 0px 0px 14px -5px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
+.a
+{
+    display: inline;
+
+    width: 30%;
+    height: 100px;
+    padding-top: 3px;
+    padding-left: 18px;
+
+    text-align: left;
+
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
 }
 
-.expenses {
-  margin-right: 3.2%;
-  margin-left: 3.2%;
+.expenses
+{
+    margin-right: 3.2%;
+    margin-left: 3.2%;
 }
 
-.numbers {
-  font-size: 20px;
-  font-family: 'Biryani', sans-serif;
-  padding-top: 8px;
+.numbers
+{
+    padding-top: 8px;
+
+    font-family: 'Biryani', sans-serif;
+    font-size: 20px;
 }
 
 /* Accounts Section */
-.manage-accounts {
-  display: inline-block;
-  float: right;
-  background-color: #1CA3BA;
-  border: 1px solid #1CA3BA;
-  color: white;
-  height: 30px;
-  width: 170px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  position: absolute;
-  bottom: -37px;
-  left: 73%;
-  border-radius: 50px;
-  font-size: 14px;
-  box-shadow: 0px 0px 14px -5px rgba(0, 0, 0, 0.05);
+.manage-accounts
+{
+    position: absolute;
+    bottom: -37px;
+    left: 73%;
+
+    display: inline-block;
+    float: right;
+
+    width: 170px;
+    height: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    color: white;
+    border: 1px solid #1ca3ba;
+    border-radius: 50px;
+    background-color: #1ca3ba;
+    box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
+
+    font-size: 14px;
 }
 
-.manage-accounts:hover {
-  background-color: white;
-  border: 2px solid #1CA3BA;
-  color: #1CA3BA;
+.manage-accounts:hover
+{
+    color: #1ca3ba;
+    border: 2px solid #1ca3ba;
+    background-color: white;
 }
 
-.accounts {
-  display: block;
-  width: 82%;
-  height: 55px;
-  margin-left: 110px;
-  background-color: white;
-  border: none;
-  margin-top: 10px;
-  box-shadow: 0px 0px 14px -5px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
+.accounts
+{
+    display: block;
+
+    width: 82%;
+    height: 55px;
+    margin-top: 10px;
+    margin-left: 110px;
+
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
 }
 
-.accounts-buttons-box {
-  margin-top: 25px;
+.accounts-buttons-box
+{
+    margin-top: 25px;
 }
 
-.button-icons {
-  width: 10%;
+.button-icons
+{
+    width: 10%;
 }
 
-.company {
-  font-size: 18px;
-  float: left;
-  width: 50%;
-  text-align: left;
-  padding-left: 80px;
-  padding-top: 6px;
+.company
+{
+    float: left;
+
+    width: 50%;
+    padding-top: 6px;
+    padding-left: 80px;
+
+    text-align: left;
+    font-size: 18px;
 }
 
-.account-type {
-  font-size: 18px;
-  text-align: left;
-  width: 20%;
-  padding-right: 15px;
-  padding-top: 6px;
-  display: inline-block;
-  float: right;
+.account-type
+{
+    display: inline-block;
+    float: right;
+
+    width: 20%;
+    padding-top: 6px;
+    padding-right: 15px;
+
+    text-align: left;
+    font-size: 18px;
 }
 
 /* Transactions Section */
-.new-transactions {
-  display: inline-block;
-  float: right;
-  background-color: #1CA3BA;
-  border: 1px;
-  border-color: #1CA3BA;
-  color: white;
-  height: 30px;
-  width: 170px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 50px;
-  font-size: 14px;
-  margin-right: 10px;
+.new-transactions
+{
+    display: inline-block;
+    float: right;
+
+    width: 170px;
+    height: 30px;
+    margin-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    color: white;
+    border: 1px;
+    border-color: #1ca3ba;
+    border-radius: 50px;
+    background-color: #1ca3ba;
+
+    font-size: 14px;
 }
 
-.new-transactions:hover {
-  background-color: white;
-  border: 2px solid #1CA3BA;
-  color: #1CA3BA;
+.new-transactions:hover
+{
+    color: #1ca3ba;
+    border: 2px solid #1ca3ba;
+    background-color: white;
 }
 
-.transactions {
-  border-collapse: collapse;
-  text-align: left;
-  position: absolute;
-  top: 65px;
-  right: 15px;
-  left: 15px;
-  display: inline-block;
+.transactions
+{
+    position: absolute;
+    top: 65px;
+    right: 15px;
+    left: 15px;
+
+    display: inline-block;
+
+    border-collapse: collapse;
+
+    text-align: left;
 }
 
-.transactions td {
-  border-bottom: 2px solid #CCCCCC;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-right: 55px;
-  position: relative;
-  right: 15px;
-  left: 15px;
+.transactions td
+{
+    position: relative;
+    right: 15px;
+    left: 15px;
+
+    padding-top: 6px;
+    padding-right: 55px;
+    padding-bottom: 6px;
+
+    border-bottom: 2px solid #ccc;
 }
 
-.transactions th {
-  padding-top: 6px;
-  padding-bottom: 6px;
-  position: relative;
-  right: 15px;
-  left: 15px;
+.transactions th
+{
+    position: relative;
+    right: 15px;
+    left: 15px;
+
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
-.white-block {
-  background-color: white;
-  width: 580px;
-  height: 470px;
-  top: 96px;
-  right: 25px;
-  left: 6px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  display: block;
-  position: relative;
-  box-shadow: 0px 0px 14px -5px rgba(0, 0, 0, 0.05);
-  border-radius: 4px;
+.white-block
+{
+    position: relative;
+    top: 96px;
+    right: 25px;
+    left: 6px;
+
+    display: block;
+
+    width: 580px;
+    height: 470px;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
 }
 
 /* Transactions Page */
-.transactions-page {
-  visibility: hidden;
-  height: 100%;
-  width: 100%;
+.transactions-page
+{
+    visibility: hidden;
+
+    width: 100%;
+    height: 100%;
 }
 /* Header */
-#transactions-page-header {
-  display: inline-block;
-  width: 100%;
-  padding: 0;
-  margin-bottom: 1px;
-  height: 95px;
+#transactions-page-header
+{
+    display: inline-block;
+
+    width: 100%;
+    height: 95px;
+    margin-bottom: 1px;
+    padding: 0;
 }
 
-.transactions-buttons-span {
-  display: inline-block;
-  position: absolute;
-  top: 34px;
-  right: 0;
-  margin-bottom: 0;
+.transactions-buttons-span
+{
+    position: absolute;
+    top: 34px;
+    right: 0;
+
+    display: inline-block;
+
+    margin-bottom: 0;
 }
 
-.transactions-buttons-top {
-  background-color: white;
-  border: solid 1px #1CA3BA;
-  color: #1CA3BA;
-  display: inline-block;
-  height: 30px;
-  width: 92px;
-  border-radius: 50px;
-  margin-bottom: 0;
+.transactions-buttons-top
+{
+    display: inline-block;
+
+    width: 92px;
+    height: 30px;
+    margin-bottom: 0;
+
+    color: #1ca3ba;
+    border: solid 1px #1ca3ba;
+    border-radius: 50px;
+    background-color: white;
 }
 
-.transactions-buttons-top:hover {
-  background-color: #1CA3BA;
-  color: white;
+.transactions-buttons-top:hover
+{
+    color: white;
+    background-color: #1ca3ba;
 }
 
 /* Transactions Table and Box */
-#transactions-table-box {
-  height: 82%;
-  width: 85%;
-  background-color: white;
-  margin-left: 110px;
+#transactions-table-box
+{
+    width: 85%;
+    height: 82%;
+    margin-left: 110px;
+
+    background-color: white;
 }
 
-.table-row {
-  width: 94%;
-  margin-left: 3%;
-  margin-right: 3%;
-  text-align: left;
-  border-bottom: 2px solid #CCCCCC;
-  font-size: 12px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+.table-row
+{
+    width: 94%;
+    margin-right: 3%;
+    margin-left: 3%;
+    padding-top: 6px;
+    padding-bottom: 6px;
+
+    border-bottom: 2px solid #ccc;
+
+    text-align: left;
+    font-size: 12px;
 }
 
-.table-date {
-  width: 15%;
-  display: inline-block;
+.table-date
+{
+    display: inline-block;
+
+    width: 15%;
 }
 
-.table-account {
-  width: 20%;
-  display: inline-block;
-  padding-left: 15px;
+.table-account
+{
+    display: inline-block;
+
+    width: 20%;
+    padding-left: 15px;
 }
 
-.table-payee {
-  width: 27%;
-  display: inline-block;
-  padding-left: 5px;
+.table-payee
+{
+    display: inline-block;
+
+    width: 27%;
+    padding-left: 5px;
 }
 
-.table-inflow {
-  width: 17%;
-  display: inline-block;
+.table-inflow
+{
+    display: inline-block;
+
+    width: 17%;
 }
 
-.table-outflow {
-  width: 15%;
-  display: inline-block;
+.table-outflow
+{
+    display: inline-block;
+
+    width: 15%;
 }
 
-#table-first-row {
-  padding-top: 20px;
-  font-weight: bold;
-  font-size: 16px;
+#table-first-row
+{
+    padding-top: 20px;
+
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* New Transactions Form */
-#new-transaction-box {
-  height: 82%;
-  width: 83%;
-  background-color: white;
-  display: inline-block;
-  margin-top: 97px;
-  margin-left: 35px;
-}
+#new-transaction-box
+{
+    display: inline-block;
 
-p {
-  font-size: 14px;
-  width: 80%;
-  margin-left: 10%;
-  text-align: left;
-  margin-top: 5px;
-  margin-bottom: 0;
-  padding: 0;
-}
+    width: 83%;
+    height: 82%;
+    margin-top: 97px;
+    margin-left: 35px;
 
-#new-transactions-header {
-  margin: 0;
-  text-align: center;
-  width: 100%;
-  padding-top: 15px;
-  padding-bottom: 4px;
-  font-size: 23px;
-}
-
-select {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: 28px;
-  box-shadow: 0px 1px 7px 1px rgba(0,0,0,0.1);
-  background-color: #F8F8F8;
-  border: 1px solid #F8F8F8;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-input {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-top: 0;
-  margin-bottom: 0;
-  height: 28px;
-  box-shadow: 0px 1px 7px 1px rgba(0,0,0,0.1);
-  background-color: white;
-  border: 1px solid white;
-  border-radius: 5px;
-}
-
-#log-expense {
-  background-color: #1CA3BA;
-  border: solid 1px #1CA3BA;
-  color: white;
-  display: inline-block;
-  height: 37px;
-  width: 180px;
-  border-radius: 50px;
-  margin-top: 20px;
-  margin-right: 246px;
-  font-size: 14px;
-}
-
-#log-expense:hover {
     background-color: white;
-    border: 2px solid #1CA3BA;
-    color: #1CA3BA;
-  }
+}
+
+p
+{
+    width: 80%;
+    margin-top: 5px;
+    margin-bottom: 0;
+    margin-left: 10%;
+    padding: 0;
+
+    text-align: left;
+    font-size: 14px;
+}
+
+#new-transactions-header
+{
+    width: 100%;
+    margin: 0;
+    padding-top: 15px;
+    padding-bottom: 4px;
+
+    text-align: center;
+    font-size: 23px;
+}
+
+select
+{
+    width: 80%;
+    height: 28px;
+    margin-top: 0;
+    margin-right: 10%;
+    margin-bottom: 0;
+    margin-left: 10%;
+
+    border: 1px solid #f8f8f8;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    box-shadow: 0 1px 7px 1px rgba(0,0,0,.1);
+
+    font-size: 14px;
+}
+
+input
+{
+    width: 80%;
+    height: 28px;
+    margin-top: 0;
+    margin-right: 10%;
+    margin-bottom: 0;
+    margin-left: 10%;
+
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 1px 7px 1px rgba(0,0,0,.1);
+}
+
+#log-expense
+{
+    display: inline-block;
+
+    width: 180px;
+    height: 37px;
+    margin-top: 20px;
+    margin-right: 246px;
+
+    color: white;
+    border: solid 1px #1ca3ba;
+    border-radius: 50px;
+    background-color: #1ca3ba;
+
+    font-size: 14px;
+}
+
+#log-expense:hover
+{
+    color: #1ca3ba;
+    border: 2px solid #1ca3ba;
+    background-color: white;
+}
