--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,7 @@ html {
 
 body {
     box-sizing: border-box;
-
     background-color: #f5f5f5;
-
     font-family: 'Biryani', sans-serif;
 }
 
@@ -15,20 +13,21 @@ body {
 h1 {
     margin-left: 110px;
     padding-top: 2px;
-
     font-size: 30px;
 }
 
 h2 {
     display: inline;
     float: left;
-
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 110px;
     padding: 0;
 }
 
+h3 {
+  font-size: 22px;
+}
 /* Columns */
 .column-l {
     position: absolute;
@@ -44,10 +43,8 @@ h2 {
     right: 0;
     bottom: 0;
     left: 50%;
-
     padding-left: 75px;
 }
-
 
 /* Nav Bar */
 nav {
@@ -56,10 +53,8 @@ nav {
     top: 0;
     bottom: 0;
     left: 0;
-
     width: 75px;
     margin: 0;
-
     background-color: white;
 }
 
@@ -68,7 +63,6 @@ li {
     padding-right: 22px;
     padding-bottom: 5px;
     padding-left: 15px;
-
     list-style-type: none;
 }
 
@@ -84,6 +78,7 @@ li {
 .nav-button {
     border-color: white;
     background-color: white;
+    border-left: solid 4px white;
 }
 
 button.nav-button:active {
@@ -108,13 +103,11 @@ button.nav-button:active {
 
 .accounts-header {
     position: relative;
-
     margin-top: 60px;
 }
 
 .icons2 {
     float: left;
-
     width: 30px;
     height: auto;
     margin-left: 12px;
@@ -123,14 +116,12 @@ button.nav-button:active {
 /* Popup */
 .popup {
     position: relative;
-
     width: 79%;
-    height: 80px;
+    height: 90px;
     margin-bottom: 13px;
     margin-left: 110px;
     padding-top: 8px;
     padding-left: 22px;
-
     border: 0;
     border-radius: 4px;
     background-image: linear-gradient(to right, #8ed1dc, #e3f4f6);
@@ -141,9 +132,7 @@ button.nav-button:active {
     position: absolute;
     top: 12px;
     right: 12px;
-
     padding: 0;
-
     border: none;
     background: transparent;
 }
@@ -166,14 +155,11 @@ button:active {
 
 .a {
     display: inline;
-
     width: 30%;
     height: 100px;
     padding-top: 3px;
     padding-left: 18px;
-
     text-align: left;
-
     border: none;
     border-radius: 4px;
     background-color: white;
@@ -187,7 +173,6 @@ button:active {
 
 .numbers {
     padding-top: 8px;
-
     font-family: 'Biryani', sans-serif;
     font-size: 20px;
 }
@@ -197,21 +182,17 @@ button:active {
     position: absolute;
     bottom: -37px;
     left: 73%;
-
     display: inline-block;
     float: right;
-
     width: 170px;
     height: 30px;
     padding-top: 5px;
     padding-bottom: 5px;
-
     color: white;
     border: 1px solid #1ca3ba;
     border-radius: 50px;
     background-color: #1ca3ba;
     box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
-
     font-size: 14px;
 }
 
@@ -223,12 +204,10 @@ button:active {
 
 .accounts {
     display: block;
-
     width: 82%;
     height: 55px;
     margin-top: 10px;
     margin-left: 110px;
-
     border: none;
     border-radius: 4px;
     background-color: white;
@@ -245,11 +224,9 @@ button:active {
 
 .company {
     float: left;
-
     width: 50%;
     padding-top: 6px;
     padding-left: 80px;
-
     text-align: left;
     font-size: 18px;
 }
@@ -257,11 +234,9 @@ button:active {
 .account-type {
     display: inline-block;
     float: right;
-
     width: 20%;
     padding-top: 6px;
     padding-right: 15px;
-
     text-align: left;
     font-size: 18px;
 }
@@ -270,19 +245,16 @@ button:active {
 .new-transactions {
     display: inline-block;
     float: right;
-
     width: 170px;
     height: 30px;
     margin-right: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
-
     color: white;
     border: 1px;
     border-color: #1ca3ba;
     border-radius: 50px;
     background-color: #1ca3ba;
-
     font-size: 14px;
 }
 
@@ -297,11 +269,8 @@ button:active {
     top: 65px;
     right: 15px;
     left: 15px;
-
     display: inline-block;
-
     border-collapse: collapse;
-
     text-align: left;
 }
 
@@ -309,11 +278,9 @@ button:active {
     position: relative;
     right: 15px;
     left: 15px;
-
     padding-top: 6px;
     padding-right: 55px;
     padding-bottom: 6px;
-
     border-bottom: 2px solid #ccc;
 }
 
@@ -321,7 +288,6 @@ button:active {
     position: relative;
     right: 15px;
     left: 15px;
-
     padding-top: 6px;
     padding-bottom: 6px;
 }
@@ -331,16 +297,13 @@ button:active {
     top: 96px;
     right: 25px;
     left: 6px;
-
     display: block;
-
     width: 580px;
     height: 470px;
     padding-top: 20px;
     padding-right: 10px;
     padding-bottom: 20px;
     padding-left: 10px;
-
     border-radius: 4px;
     background-color: white;
     box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
@@ -349,14 +312,12 @@ button:active {
 /* Transactions Page */
 .transactions-page {
     visibility: hidden;
-
     width: 100%;
     height: 100%;
 }
 /* Header */
 #transactions-page-header {
     display: inline-block;
-
     width: 100%;
     height: 95px;
     margin-bottom: 1px;
@@ -367,19 +328,15 @@ button:active {
     position: absolute;
     top: 34px;
     right: 0;
-
     display: inline-block;
-
     margin-bottom: 0;
 }
 
 .transactions-buttons-top {
     display: inline-block;
-
     width: 92px;
     height: 30px;
     margin-bottom: 0;
-
     color: #1ca3ba;
     border: solid 1px #1ca3ba;
     border-radius: 50px;
@@ -396,7 +353,6 @@ button:active {
     width: 85%;
     height: 82%;
     margin-left: 110px;
-
     background-color: white;
 }
 
@@ -406,48 +362,40 @@ button:active {
     margin-left: 3%;
     padding-top: 6px;
     padding-bottom: 6px;
-
     border-bottom: 2px solid #ccc;
-
     text-align: left;
     font-size: 12px;
 }
 
 .table-date {
     display: inline-block;
-
     width: 15%;
 }
 
 .table-account {
     display: inline-block;
-
     width: 20%;
     padding-left: 15px;
 }
 
 .table-payee {
     display: inline-block;
-
     width: 27%;
     padding-left: 5px;
 }
 
 .table-inflow {
     display: inline-block;
-
     width: 17%;
 }
 
 .table-outflow {
     display: inline-block;
-
     width: 15%;
 }
 
 #table-first-row {
     padding-top: 20px;
-
     font-size: 16px;
     font-weight: bold;
 }
@@ -455,12 +403,10 @@ button:active {
 /* New Transactions Form */
 #new-transaction-box {
     display: inline-block;
-
     width: 83%;
     height: 82%;
     margin-top: 97px;
     margin-left: 35px;
-
     background-color: white;
 }
 
@@ -470,7 +416,6 @@ p {
     margin-bottom: 0;
     margin-left: 10%;
     padding: 0;
-
     text-align: left;
     font-size: 14px;
 }
@@ -480,7 +425,6 @@ p {
     margin: 0;
     padding-top: 15px;
     padding-bottom: 4px;
-
     text-align: center;
     font-size: 23px;
 }
@@ -492,7 +436,6 @@ select {
     margin-right: 10%;
     margin-bottom: 0;
     margin-left: 10%;
-
     border: 1px solid #f8f8f8;
     border-radius: 5px;
     background-color: #f8f8f8;
@@ -508,7 +451,6 @@ input {
     margin-right: 10%;
     margin-bottom: 0;
     margin-left: 10%;
-
     border: 1px solid white;
     border-radius: 5px;
     background-color: white;
@@ -517,17 +459,14 @@ input {
 
 #log-expense {
     display: inline-block;
-
     width: 180px;
     height: 37px;
     margin-top: 20px;
     margin-right: 246px;
-
     color: white;
     border: solid 1px #1ca3ba;
     border-radius: 50px;
     background-color: #1ca3ba;
-
     font-size: 14px;
 }
 
@@ -535,4 +474,187 @@ input {
     color: #1ca3ba;
     border: 2px solid #1ca3ba;
     background-color: white;
+}
+
+/* Profile Page */
+.prof-page {
+  visibility: hidden;
+  display: flex;
+}
+
+.profile-page-name {
+  margin-left: 0px;
+}
+
+.your-profile {
+  margin-left: 0px;
+}
+
+.member-info {
+  margin-left: 0px;
+}
+
+.your-accounts {
+    margin-left: 0px;
+}
+
+.profile-page-left {
+  display: flex;
+  margin: 0px;
+  width: 40%;
+  border: 0px;
+  padding-left: 110px;
+  flex-flow: column wrap;
+}
+
+.profile-page-right {
+  display: flex;
+  margin: 0px;
+  width: 60%;
+  height: 684px;
+  border: 0px;
+  flex-flow: column wrap;
+}
+
+.your-accounts-items {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 95%;
+  margin-right: 5%;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
+  height: 65px;
+  margin-top: 15px;
+  align-items: center;
+}
+
+.green {
+  display: inline-block;
+  margin: 5px 0 0 4px;
+  width: 40%;
+  text-align: left;
+  color: #008001;
+}
+
+.profile-page-box-left {
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
+  margin-right: 95px;
+  margin-top: 15px;
+  padding-left: 20px;
+}
+
+.your-account-company-span {
+  width: 25%;
+}
+
+.your-account-type-span {
+  width: 25%;
+}
+
+.your-account-status-span {
+  width: 25%;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.status-p {
+  display: inline-block;
+  margin: 5px 0 0 0;
+  width: 40%;
+}
+
+.edit-my-info {
+  color: white;
+  border: solid 1px #1ca3ba;
+  border-radius: 50px;
+  background-color: #1ca3ba;
+  font-size: 14px;
+  height: 30px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 240px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.edit {
+  margin-right: 15px;
+  color: white;
+  border: solid 1px #1ca3ba;
+  border-radius: 50px;
+  background-color: #1ca3ba;
+  font-size: 14px;
+  width: 70px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.delete {
+  margin-right: 15px;
+  color: white;
+  border: solid 1px #EE3C4C;
+  border-radius: 50px;
+  background-color: #EE3C4C;
+  font-size: 14px;
+  width: 70px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.add-an-account {
+  display: flex;
+  flex-flow: row wrap;
+  width: 95%;
+  margin-right: 5%;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0 0 14px -5px rgba(0, 0, 0, .05);
+  margin-top: 35px;
+  align-items: center;
+  padding-bottom: 1.3em;
+}
+
+.add-an-account-header {
+  width: 100%;
+  padding-left: 1em;
+}
+
+.add-account-input {
+  width: 95%;
+  margin: 1px 0;
+  display: block;
+}
+
+.add-account-label {
+  margin: 0;
+  display: block;
+}
+
+.add-an-account-form-span {
+  width: 27%;
+  padding-left: 1em;
+}
+
+.add-an-account-status-span {
+  width: 15%;
+  padding-left: 1em;
+}
+
+.add-account-status-dropdown {
+  margin-left: 0;
+}
+
+.add-an-account-button {
+  margin-right: 1.5em;
+  color: white;
+  border: solid 1px #1ca3ba;
+  border-radius: 50px;
+  background-color: #1ca3ba;
+  font-size: 14px;
+  padding: 6px 23px 6px 23px;
+  margin-top: 28px;
 }
